--- a/HitomiScrollViewerWebApp/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Pages/Search.razor
@@ -39,25 +39,25 @@
         <MudPaper id="tag-filter-editor-control-panel" Class="pa-8 gap-2" Style="height: 60%; display: grid; grid-template-rows: repeat(3, min-content)">
             <div>
                 <TagFilterEditor @ref="_tagFilterEditor"
-                SelectedTagFilterChanged="@SelectedTagFilterChanged"
-                OnCreateButtonClicked="@CreateTagFilter"
-                OnRenameButtonClicked="@RenameTagFilter"
-                OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))"
-                OnDeleteButtonClicked="@DeleteTagFilters" />
+                                 SelectedTagFilterChanged="@SelectedTagFilterChanged"
+                                 OnCreateButtonClicked="@CreateTagFilter"
+                                 OnRenameButtonClicked="@RenameTagFilter"
+                                 OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))"
+                                 OnDeleteButtonClicked="@DeleteTagFilters" />
             </div>
             <div class="d-flex justify-space-between">
                 <div class="d-flex gap-4">
                     <MudButton Color="Color.Primary"
-                    EndIcon="@Icons.Material.Filled.Clear"
-                    OnClick="ClearAllTags"
-                    Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                        Clear All Tags
+                               EndIcon="@Icons.Material.Filled.Refresh"
+                               OnClick="LoadTags"
+                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                        Reload
                     </MudButton>
                     <MudButton Color="Color.Primary"
-                    EndIcon="@Icons.Material.Filled.Refresh"
-                    OnClick="LoadTags"
-                    Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                        Reload Tags
+                               EndIcon="@Icons.Material.Filled.Clear"
+                               OnClick="ClearAllTags"
+                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                        Clear
                     </MudButton>
                 </div>
                 <div>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div id="tag-search-chip-set-container"
-            style="border: @BORDER_SOLID_PRIMARY; border-radius: inherit;
+                 style="border: @BORDER_SOLID_PRIMARY; border-radius: inherit;
                         display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%">
                 @for (int i = 0; i < _tagSearchChipSetModels.Length; i++) {
                     <div style="grid-column: @(i + 1); border-right: @(i < TAG_CATEGORIES.Length - 1 ? BORDER_SOLID_PRIMARY : "none");">
@@ -76,40 +76,52 @@
         </MudPaper>
         <MudPaper Class="d-flex gap-4 pa-4 overflow-y-auto" Style="height: 40%;">
             <PairedTagFilterSelector @ref="_includePairedTagFilterSelector"
-            ChipModels="@_includeTagFilterChipModels"
-            HeaderText="Include"
-            HeaderTextColor="Color.Success" />
-            <MudDivider Vertical="true" Class="my-6" FlexItem="true" />
+                                     ChipModels="@_includeTagFilterChipModels"
+                                     HeaderText="Include"
+                                     HeaderTextColor="Color.Success" />
+            <MudDivider Vertical Class="my-4" FlexItem />
             <PairedTagFilterSelector @ref="_excludePairedTagFilterSelector"
-            ChipModels="@_excludeTagFilterChipModels"
-            HeaderText="Exclude"
-            HeaderTextColor="Color.Error" />
+                                     ChipModels="@_excludeTagFilterChipModels"
+                                     HeaderText="Exclude"
+                                     HeaderTextColor="Color.Error" />
         </MudPaper>
     </div>
-    <MudPaper id="search-filter-control-panel" Style="flex: 1;" Class="d-flex flex-column pa-4">
-        <MudSelect Label="Language" T="GalleryLanguageDTO" ToStringFunc="@(l => l.LocalName)" FullWidth="true" Variant="Variant.Outlined" @bind-Value="_selectedLanguage">
+    <MudStack id="search-filter-control-panel" Style="flex: 1;" StretchItems="StretchItems.End" Spacing="0">
+        <MudSelect Label="Language" T="GalleryLanguageDTO" ToStringFunc="@(l => l.LocalName)" FullWidth Variant="Variant.Outlined" @bind-Value="_selectedLanguage">
             @foreach (GalleryLanguageDTO l in _languages) {
-                <MudSelectItem Value="@l"/>
+                <MudSelectItem Value="@l" />
             }
         </MudSelect>
-        <MudSelect Label="Type" T="GalleryTypeDTO" ToStringFunc="@(t => t.Value)" FullWidth="true" Variant="Variant.Outlined" @bind-Value="_selectedType">
+        <MudSelect Label="Type" T="GalleryTypeDTO" ToStringFunc="@(t => t.Value)" FullWidth Variant="Variant.Outlined" @bind-Value="_selectedType">
             @foreach (GalleryTypeDTO t in _types) {
-                <MudSelectItem Value="@t"/>
+                <MudSelectItem Value="@t" />
             }
         </MudSelect>
-        <MudTextField T="string" Label="Additional keywords" Variant="Variant.Outlined" @bind-Text="_searchKeywordsText" />
-        <MudButton Class="my-2 py-2"
-        FullWidth="true"
-        Color="Color.Primary"
-        Variant="Variant.Filled"
-        OnClick="@CreateSearchFilter">
-            Create and copy search link
-        </MudButton>
-        <MudPaper Class="flex-1 overflow-y-auto pa-2" Outlined="true">
-            @foreach (SearchFilterModel model in _searchFilterModels)
-            {
-                <SearchFilter Model="@model"></SearchFilter>
+        <MudTextField T="string" Label="Additional keywords" Variant="Variant.Outlined" @bind-Text="_searchKeywordsText" Clearable Immediate />
+        <MudStack Row Spacing="2" StretchItems="StretchItems.Start" Class="my-2">
+            <MudButton Class="py-2"
+                       FullWidth
+                       Color="Color.Primary"
+                       Variant="Variant.Filled"
+                       OnClick="@CreateSearchFilter">
+                Create and copy search link
+            </MudButton>
+            <MudButton Class="py-2"
+                       Color="Color.Primary"
+                       OnClick="@_searchFilterModels.Clear"
+                       Disabled="@(_searchFilterModels.Count == 0)">
+                Clear
+            </MudButton>
+        </MudStack>
+        <MudStack class="overflow-y-scroll" Spacing="2">
+            @foreach (SearchFilterModel model in _searchFilterModels) {
+                <div style="display: grid; grid-template-columns: 1fr min-content; gap: 4px;">
+                    <SearchFilter Model="@model"></SearchFilter>
+                    <MudIconButton Icon="@Icons.Material.Filled.Delete"
+                                   OnClick="@(() => _searchFilterModels.Remove(model))"
+                                   Style="height: min-content; margin: auto;" />
+                </div>
             }
-        </MudPaper>
-    </MudPaper>
+        </MudStack>
+    </MudStack>
 </div>
