refactor code and started implementing various controllers

--- a/HitomiScrollViewerWebApp/Components/SearchFilterView.razor
+++ b/HitomiScrollViewerWebApp/Components/SearchFilterView.razor
@@ -25,11 +25,11 @@
                     </td>
                 </tr>
             }
-            @if (Model.SearchKeywords.Length > 0)
+            @if (Model.SearchKeywordText.Length > 0)
             {
                 <tr>
                     <td><MudText Typo="Typo.button">Keywords</MudText></td>
-                    <td>@Model.SearchKeywords</td>
+                    <td>@Model.SearchKeywordText</td>
                 </tr>
             }
         </tbody>
