--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -1,4 +1,5 @@
 ﻿@inherits ComponentBase
+@inject QueryConfigurationService QueryConfigurationService
 
 <div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
     <MudFab Color="Color.Primary"
