--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -12,7 +12,9 @@
 @using HitomiScrollViewerWebApp.Components
 @using HitomiScrollViewerWebApp.Models
 @using HitomiScrollViewerWebApp.Services
+@using HitomiScrollViewerData
 @using HitomiScrollViewerData.Entities
 @using HitomiScrollViewerData.DTOs
+@using HitomiScrollViewerData.Builders
 
 @using MudBlazor
