--- a/HitomiScrollViewerWebApp/Pages/SearchPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SearchPage.razor
@@ -1,11 +1,12 @@
 ﻿@page "/search"
-@using HitomiScrollViewerData
 @inject TagService TagService
 @inject TagFilterService TagFilterService
 @inject GalleryService GalleryService
+@inject QueryConfigurationService QueryConfigurationService
+@inject SearchFilterService SearchFilterService
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime JsRuntime
 
 <PageTitle>Search</PageTitle>
 
@@ -40,10 +41,10 @@
                 </div>
             </div>
             <div id="tag-search-chip-set-container"
-                 style="border: @BORDER_SOLID_PRIMARY; border-radius: inherit;
-                        display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%">
+                 style="border: 1px solid var(--mud-palette-primary); border-radius: inherit;
+                        display: grid; grid-template-columns: repeat(@Tag.TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%">
                 @for (int i = 0; i < _tagSearchChipSetModels.Length; i++) {
-                    <div style="grid-column: @(i + 1); border-right: @(i < TAG_CATEGORIES.Length - 1 ? BORDER_SOLID_PRIMARY : "none");">
+                    <div style="grid-column: @(i + 1);">
                         <TagSearchChipSet Model="_tagSearchChipSetModels[i]" />
                     </div>
                 }
@@ -61,7 +62,7 @@
                                      HeaderTextColor="Color.Error" />
         </MudPaper>
     </div>
-    <MudStack id="search-filter-control-panel" Style="flex: 1;" StretchItems="StretchItems.End" Spacing="0">
+    <div id="search-filter-control-panel" style="flex: 1;" class="gap-2">
         <MudSelect Label="Language" T="GalleryLanguageDTO" ToStringFunc="@(l => l.LocalName)" FullWidth Variant="Variant.Outlined" @bind-Value="_selectedLanguage">
             @foreach (GalleryLanguageDTO l in _languages) {
                 <MudSelectItem Value="@l" />
@@ -83,20 +84,20 @@
             </MudButton>
             <MudButton Class="py-2"
                        Color="Color.Primary"
-                       OnClick="@_searchFilterModels.Clear"
-                       Disabled="@(_searchFilterModels.Count == 0)">
+                       OnClick="@_searchFilters.Clear"
+                       Disabled="@(_searchFilters.Count == 0)">
                 Clear
             </MudButton>
         </MudStack>
-        <MudStack class="overflow-y-scroll" Spacing="2">
-            @foreach (SearchFilterModel model in _searchFilterModels) {
+        <MudStack class="overflow-y-scroll" Spacing="2" Style="flex: 1;">
+            @foreach (SearchFilterDTO model in _searchFilters) {
                 <div style="display: grid; grid-template-columns: 1fr min-content; gap: 4px;">
-                    <SearchFilter Model="@model"></SearchFilter>
+                    <SearchFilterView Model="@model"></SearchFilterView>
                     <MudIconButton Icon="@Icons.Material.Filled.Delete"
-                                   OnClick="@(() => _searchFilterModels.Remove(model))"
+                                   OnClick="@(() => DeleteSearchFilter(model))"
                                    Style="height: min-content; margin: auto;" />
                 </div>
             }
         </MudStack>
-    </MudStack>
+    </div>
 </div>
