--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -1,5 +1,6 @@
 ﻿@inherits ComponentBase
-@inject QueryConfigurationService QueryConfigurationService
+@inject SearchService SearchService
+@inject PageConfigurationService PageConfigurationService
 
 <div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
     <MudFab Color="Color.Primary"
@@ -14,7 +15,7 @@
     <MudSelect T="TagFilterDTO"
                Variant="Variant.Outlined"
                Label="Tag Filter"
-               @bind-Value="CurrentTagFilter"
+               @bind-Value="@CurrentTagFilter"
                ToStringFunc="@(tf => tf.Name)"
                Style="grid-column: 3;"
                Class="tag-filter-selector">
