--- a/HitomiScrollViewerWebApp/Components/TagSearchChipSet.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchChipSet.razor
@@ -10,12 +10,11 @@
                      AdornmentIcon="@Icons.Material.Filled.Search"
                      ShowProgressIndicator="true"
                      @bind-Value="@SearchValue"
-                     Color="@Color.Primary"
                      Style="width: 90%; margin: auto; grid-row: 1;">
     </MudAutocomplete>
     <MudChipSet T="@(ChipModel<TagDTO>)"
                 SelectionMode="SelectionMode.MultiSelection"
-                SelectedColor="@Color.Primary"
+                SelectedColor="Color.Primary"
                 Variant="@Variant.Filled"
                 Style="overflow-y: auto; grid-row: 2;">
         @foreach (ChipModel<TagDTO> model in Model.ChipModels) {
