--- a/HitomiScrollViewerWebApp/Components/TagFilterSelector.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterSelector.razor
@@ -1,26 +1,21 @@
-﻿@inherits ChipSetBase<TagFilterDTO>
+﻿@inherits ComponentBase
 
 <div class="d-flex flex-column gap-4 @Class" style="@Style">
     @if (HeaderText != null)
     {
-        <MudText Color="@HeaderTextColor" Typo="Typo.h6" Align="Align.Center">@HeaderText</MudText>
+        <MudText Color="@HeaderColor" Typo="Typo.h6" Align="Align.Center">@HeaderText</MudText>
     }
-    <MudChipSet T="@(ChipModel<TagFilterDTO>)"
-                SelectionMode="SelectionMode.MultiSelection"
+    <MudChipSet SelectionMode="SelectionMode.MultiSelection"
                 @bind-SelectedValues="@SelectedChipModels"
                 @bind-SelectedValues:after="(() => SelectedChipModelsChanged?.Invoke(SelectedChipModels))"
                 SelectedColor="@Color.Primary"
                 Variant="@Variant.Filled"
                 Class="overflow-y-auto">
         @foreach (ChipModel<TagFilterDTO> model in ChipModels) {
-            <MudChip T="@(ChipModel<TagFilterDTO>)"
-                     Value="@model"
-                     Disabled="@model.Disabled"
-                     @bind-Selected="@model.Selected"
-                     @key="model.Value.Id"
-                     id="@model.Id">
-                @(model.Value.Name)
-            </MudChip>
+            <ColorCorrectedChip T="TagFilterDTO"
+                                Model="@model"
+                                ToStringFunc="@(model => model.Value.Name)"
+                                OnSelectedChanged="@OnSelectedChanged" />
         }
     </MudChipSet>
 </div>
