--- a/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
@@ -1,6 +1,7 @@
-﻿@inherits ChipSetBase<TagDTO>
+﻿@inherits ComponentBase
+@inject IJSRuntime JSRuntime
 
-<div style="display: grid; grid-template-rows: auto 1fr; max-height: 100%">
+<div style="display: grid; grid-template-rows: auto 1fr; max-height: 100%; @Style" class="@Class">
     <MudAutocomplete T="TagDTO"
                      Label="@Model.Label"
                      DebounceInterval="500"
@@ -18,13 +19,10 @@
                 Variant="@Variant.Filled"
                 Style="overflow-y: auto; grid-row: 2;">
         @foreach (ChipModel<TagDTO> model in Model.ChipModels) {
-            <MudChip T="@(ChipModel<TagDTO>)"
-                     Value="@model"
-                     OnClose="@HandleClosed"
-                     @key="model"
-                     id="@model.Id">
-                @Model.ToStringFunc(model.Value)
-            </MudChip>
+            <ColorCorrectedChip T="TagDTO"
+                                Model="@model"
+                                ToStringFunc="@(m => m.Value.Value)"
+                                OnClose="@HandleClosed" />
         }
     </MudChipSet>
 
