Implemented TagFilterEditDialog to also let enter key execute the action

--- a/HitomiScrollViewerWebApp/Components/DialogTagFilterSelector.razor
+++ b/HitomiScrollViewerWebApp/Components/DialogTagFilterSelector.razor
@@ -1,4 +1,2 @@
-﻿@inherits ComponentBase
-
-<TagFilterSelector @ref="_tagFilterSelector"
+﻿<TagFilterSelector @ref="_tagFilterSelector"
                    ChipModels="@ChipModels"/>
