--- a/HitomiScrollViewerWebApp/Components/DialogTextField.razor
+++ b/HitomiScrollViewerWebApp/Components/DialogTextField.razor
@@ -1,10 +1,10 @@
-﻿<MudTextField FullWidth="true"
+﻿<MudTextField FullWidth Immediate
               Label="Name"
               Counter="TagFilter.TAG_FILTER_NAME_MAX_LEN"
               MaxLength="TagFilter.TAG_FILTER_NAME_MAX_LEN"
-              Immediate="true"
               T="string"
               @bind-Value="@Text"
               @bind-Value:after="@AfterTextChanged"
               Error="@_showErrorMessage"
-              ErrorText="@_errorMessage" />
+              ErrorText="@_errorMessage"
+              OnKeyDown="@OnKeyDown" />
